# sinau

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
apps/v1/main/: admin.py  apps.py
apps/v1/main/models/: __init__.py  appearance_setting.py  category.py  course.py  discount.py  duration_range.py  enrollment.py  faq.py  feedback.py  help.py  lesson.py  notification.py  notification_setting.py  price_range.py  privacy_policy.py  promotion.py  security_setting.py  setting.py  settings_menu.py  student.py  student_lesson.py  tag.py  terms_and_conditions.py  wishlist.py
apps/v1/shared/: __init__.py  admin.py  apps.py  models.py  permissions.py  utility.py
apps/v1/shared/utils/: response.py
apps/v1/users/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
core/: settings.py  urls.py
